Fix canvas aspect ratio and default overflow issues

--- a/style.css
+++ b/style.css
@@ -363,7 +363,7 @@ input[type=range]:focus::-webkit-slider-runnable-track {
   overflow: hidden;
   border-radius: 1rem;
   width: 100%;
-  height: 70vh;
+  min-height: 300px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -383,9 +383,12 @@ input[type=range]:focus::-webkit-slider-runnable-track {
 }
 
 canvas {
+  max-width: 100%;
+  height: auto;
   display: block;
   cursor: crosshair;
   z-index: 10;
+  transform-origin: 0 0;
 }
 
 /* Utility */
